# cert-lab

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
content/es/: certifications.yml
src/cert_lab/: __init__.py  app.py  content.py  db.py  models.py  scoring.py
src/cert_lab/data/es/: certifications.yml
src/cert_lab/static/: styles.css
src/cert_lab/templates/: base.html  certification.html  dashboard.html  quiz.html  quiz_result.html
tests/: test_content.py  test_routes.py  test_scoring.py
